--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -86,10 +86,10 @@
 
         } */
 
-        footer {
+        footer { 
             background-color: #333;
             color: #fff;
-            padding: 2em 0;
+            padding: 2em 30;
             margin-top: 30%;
             width: 100%;
         }
@@ -107,12 +107,15 @@
 
         .footer-section h3 {
             font-size: 1.3em;
+            padding-left: 10%;
+            padding-right: 10%;
             margin-bottom: 10px;
         }
 
         .footer-section ul {
             list-style-type: none;
-            padding: 0;
+            padding-left: 10%;
+            padding-right: 10%;
             margin: 0;
         }
 
@@ -146,7 +149,7 @@
                 <li class="page">Home</li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Catalog.html">Catalog</a></li>
-                <li><a href="Resources.html">Resources</a></li>
+                <li><a href="Research.html">Research</a></li>
                 <li><a href="Event.html">Event</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </nav>
@@ -244,8 +247,10 @@
                             <a href="mailto:dcs@ug.edu.gh">dcs@ug.edu.gh</a>
                         </p>
                         <p>Location<br>
-                            University Of Ghana, Legon Campus<br>
-                            Opposite Mathematics Department
+                            University Of Ghana,<br>
+                             Legon Campus<br>
+                            Opposite Mathematics<br>
+                             Department
                         </p>
                     </div>
                 </div>
@@ -255,8 +260,7 @@
             </div>
         </footer>
 
-</body>
-</html>
+
 
     </div>
 </body>
