--- a/Pages/Home copy.html
+++ b/Pages/Home copy.html
@@ -1,87 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UG | Department of Computer Science - Home</title>
-    <style>
-        body {
-            width: 90%;
-            margin: 0 auto;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-
-        .logo {
-            width: 300px;
-            height: auto;
-        }
-
-        nav {
-            display: flex;
-            list-style: none;
-            margin-top: 1%;
-        }
-
-        nav li {
-            margin-left: 10px;
-        }
-
-        nav a {
-            text-decoration: none;
-        }
-
-        .slideshow {
-            position: relative;
-            width: 100%;
-            height: 0;
-            padding-bottom: 59.25%;
-        }
-
-        .slideshow video {
-            position: absolute;
-            top: 50px;
-            left: 0;
-            width: 100%;
-            height: 87%;
-        }
-
-        .slideshow-text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            color: blue;
-        }
-    </style>
-</head>
-<body>
-    <div class="body">
-        <header>
-            <img src="..\Images\CS_logo.png" alt="UG Logo" class="logo">
-            <nav>
-                <li class="page">Home</li>
-                <li><a href="About.html">About</a></li>
-                <li><a href="Catalog.html">Catalog</a></li>
-                <li><a href="Resources.html">Resources</a></li>
-                <li><a href="Event.html">Event</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-            </nav>
-        </header>
-
-        <div class="slideshow">
-            <video width="100%" height="auto" muted loop>
-                <source src="C:\Users\user\Desktop\DCIT 205 Interim Assesment\Images\video-bg (1).mp4" type="video/mp4">
-            </video>
-            <div class="slideshow-text">
-                <h1 class="ss-text">YOUR GATEWAY TO WORLD CLASS <br>COMPUTER SCIENCE EDUCATION</h1>
+<div class="aboutus">
+            <img src="..\Images\about us img.jpg" class="aboutus img">
+            <div class="aboutus-text">
+                <h1 class="au-text"> About Us </h1>
+                <p>Home ::before About</p>
             </div>
+            <div class="welcome">
+                <p>Welcome</p>
+                </div>
+                <div class="welcome-text">
+                    <p> 
+                        This is the Information Technology age and at its core is Computer Science. The study of computer science is therefore critical if society is to take full advantage<br>
+                        of the benefits Information Technology has to offer and make rapid economic advances. Computer science involves the study and development of<br>
+                        applications that allow for our everyday use of computers, the software systems that support these applications, and the means and methods used to produce<br>
+                        both applications and systems that behave reliably, correctly and ethically. At the heart of Computer Science lies the skill of computer programming and<br>
+                        employers who hire Computer Scientists expect adept programmers with knowledge of current techniques and tools and the ability to apply sound engineering<br>
+                        principles to the development, construction and maintenance of computer programs.
+                    </p>
+                    <p>
+                        The range of courses available in the department and the skills acquired by students enable them to find employment in many diverse fields of the economy<br>
+                        and prepare our graduates for the computing industry, working in a project team (or research and development team), and to enable the graduate to bring<br>
+                        specialist skills to that team. The course also provides the platform for further study or research through exposure to established and emerging technologies<br>
+                        and methods, and to active fields of research in Computer Science.
+                    </p>
+                    <p>
+                        The Department offers two undergraduate degree programmes, Bachelor of Science in Computer Science Single-Major (3:2:1:1) and Major-Minor (3:2:2:1) as well<br>
+                        as Bachelor of Science in Information Technology.
+                    </p>
+                </div>
+                <div class="know-us">
+                    <p>Get To Know Us</p>
+                </div>
+                <div class="knowus-text">
+                    <p>Things get interesting because you are eager to know more , or you become eager to know more because it is interesting?</p>
+                </div>
+                <div classs="organization">
+                    <img src="../Images/g4.jpg">
+                    <img src="../Images/g4.jpg">
+                </div>
         </div>
-    </div>
-</body>
-</html>
